--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="message_validate_internet">Verificar conexión a internet</string>
     <string name="text_again">Intentar de nuevo</string>
     <string name="accept">Aceptar</string>
+    <string name="delete_product">Producto eliminado</string>
 </resources>
